--- a/Homepage/main.css
+++ b/Homepage/main.css
@@ -16,7 +16,7 @@ body{
 }
 
 .widthsize{
-    max-width: 1140px;
+    max-width: 1400px;
     margin:0 auto;
 }
 
@@ -110,8 +110,8 @@ body{
     box-shadow: 0 2px 2px #efefef;
 }
 
-.sticky main-nav li a:link,
-.sticky main-nav li a:visited{
+.sticky li a:link,
+.sticky li a:visited{
     padding: 16px 0;
     color: #fff;
 }
@@ -145,7 +145,6 @@ li:last-child {
     padding: 10px;
 }
 
-
 .logo-mini{
     height: 20px;
 }
@@ -158,14 +157,13 @@ li:last-child {
 
 .section-style{
     margin-top: 40px;
-
 }
 
 h2{
     font-weight: 300;
+    font-family:'Microsoft YaHei',sans-serif;
     text-transform: uppercase;
     font-size: 50px;
-    font-family:Calibri;
     word-spacing: 2px;
     text-align: center;
     margin-bottom: 30px;
@@ -173,14 +171,8 @@ h2{
 }
 
 p{
-    font-family:Calibri;
     font-size:17px;
-}
-
-h5{
-  font-size: 27px;
-  padding-bottom: 20px;
-
+    font-family: "Calibri", serif;
 }
 
 .long-copy {
@@ -221,7 +213,6 @@ h5{
   background-color: #fff;
 }
 
-
 .card-wrapper{
     display: flex;
     align-items: center;
@@ -246,12 +237,12 @@ h5{
     color: black;
     margin-top: 10px;
 }
+
 .container-p{
   padding-top: 20px;
   padding-bottom: 20px;
   border-bottom: 2px solid #211545;
   height: 110px;
-
 }
 
 .card ul{
@@ -259,8 +250,8 @@ h5{
 }
 
 .subheading{
-  margin-bottom: 0px;
-  margin-top: 0px;
+  margin-bottom: 0;
+  margin-top: 0;
   color: white;
   background-color: #008CBA;
   border-top-left-radius: 5px;
@@ -271,9 +262,10 @@ h5{
   width: 100%;
   height: 90px;
 }
+
 .subheading-2{
-  margin-bottom: 0px;
-  margin-top: 0px;
+  margin-bottom: 0;
+  margin-top: 0;
   color: white;
   background-color: #008CBA;
   border-top-left-radius: 5px;
@@ -315,9 +307,7 @@ h5{
   padding-bottom: 40px;
   padding-top: 7px;
   margin-bottom: 0;
-
 }
-
 
 .card h3{
     text-align: center;
@@ -327,7 +317,6 @@ h5{
 .card p{
     text-align:center;
     font-size:18px;
-    font-family:Calibri;
     padding-left: 10px;
 }
 
@@ -363,7 +352,6 @@ footer {
   height: 300px;
 }
 
-
 /*Small phones: from 0 to 480px */
 @media only screen and (min-width: 320px) {
     .card-wrapper {
@@ -381,25 +369,34 @@ footer {
     .mobile-nav-icon {display: inline-block;}
 }
 
-
 /* Small phones to small tablets: from 481px to 767px */
 
-    @media only screen and (max-width: 840px){
-      body{font-size: 15px;}
-      section{padding: 30px 0;}
-         .mobile-nav-icon img{display: inline-block;}
-        .main-nav{
-            float: left;
-        }
-        .main-nav li{
-            display: block;
+@media only screen and (max-width: 840px) {
+    body {
+        font-size: 15px;
+    }
 
-        }
-        .main-nav li a:link,
-        .main-nav li a:visited{
-            display: block;
-            border: 0;
-        }
+    section {
+        padding: 30px 0;
+    }
 
+    .mobile-nav-icon img {
+        display: inline-block;
+    }
+
+    .main-nav {
+        float: left;
+    }
+
+    .main-nav li {
+        display: block;
 
     }
+
+    .main-nav li a:link,
+    .main-nav li a:visited {
+        display: block;
+        border: 0;
+    }
+}
+
