--- a/Homepage/sub.css
+++ b/Homepage/sub.css
@@ -163,7 +163,6 @@ li:last-child {
 
 h2{
     font-weight: 300;
-    text-transform: uppercase;
     font-size: 50px;
     font-family:Calibri;
     word-spacing: 2px;
@@ -200,10 +199,10 @@ h5{
     align-items: center;
     justify-content: center;
     float: left;
-    width:400px;
+    width:380px;
     font-size: 16px;
     margin: 30px;
-    height: 420px;
+    height: 500px;
     background-color: #fff;
     border-radius: 5px;
 }
@@ -247,11 +246,20 @@ h5{
     margin-top: 10px;
 }
 .container-p{
-  padding-top: 20px;
+  padding-top: 10px;
   padding-bottom: 20px;
   border-bottom: 2px solid #211545;
-  height: 110px;
+  height: 200px;
 
+}
+
+.QQ{
+  text-align:center;
+  font-size:18px;
+  font-family:Calibri;
+  padding-left: 10px;
+  padding-bottom: 10px;
+  padding-top: 10px;
 }
 
 .card ul{
